err/google-endpoints-api-management.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/apitools'...
Listing './lib/python3.5/site-packages/apitools/base'...
Listing './lib/python3.5/site-packages/apitools/base/protorpclite'...
Listing './lib/python3.5/site-packages/apitools/base/py'...
Listing './lib/python3.5/site-packages/apitools/base/py/testing'...
Listing './lib/python3.5/site-packages/apitools/data'...
Listing './lib/python3.5/site-packages/apitools/gen'...
Listing './lib/python3.5/site-packages/apitools/gen/testdata'...
Listing './lib/python3.5/site-packages/apitools/gen/testdata/dns'...
Listing './lib/python3.5/site-packages/apitools/scripts'...
Listing './lib/python3.5/site-packages/apitools/scripts/testdata'...
Listing './lib/python3.5/site-packages/cachetools'...
Listing './lib/python3.5/site-packages/cachetools-1.1.6.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dogpile'...
Listing './lib/python3.5/site-packages/dogpile/cache'...
Listing './lib/python3.5/site-packages/dogpile/cache/backends'...
Listing './lib/python3.5/site-packages/dogpile/cache/plugins'...
Listing './lib/python3.5/site-packages/dogpile/util'...
Listing './lib/python3.5/site-packages/dogpile.cache-0.6.4.egg-info'...
Listing './lib/python3.5/site-packages/enum'...
Listing './lib/python3.5/site-packages/enum34-1.1.6.dist-info'...
Listing './lib/python3.5/site-packages/fasteners'...
Listing './lib/python3.5/site-packages/fasteners/tests'...
Listing './lib/python3.5/site-packages/fasteners-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/google_apitools-0.5.20.egg-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/monotonic-1.4.dist-info'...
Listing './lib/python3.5/site-packages/oauth2client'...
Listing './lib/python3.5/site-packages/oauth2client/contrib'...
Listing './lib/python3.5/site-packages/oauth2client/contrib/django_util'...
Listing './lib/python3.5/site-packages/oauth2client-3.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1_modules'...
Listing './lib/python3.5/site-packages/pyasn1_modules-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/rsa'...
Listing './lib/python3.5/site-packages/rsa-3.4.2.dist-info'...
Listing './lib/python3.5/site-packages/samples'...
Listing './lib/python3.5/site-packages/samples/dns_sample'...
Listing './lib/python3.5/site-packages/samples/dns_sample/dns_v1'...
Compiling './lib/python3.5/site-packages/samples/dns_sample/dns_v1/dns_v1.py'...
***   File "./lib/python3.5/site-packages/samples/dns_sample/dns_v1/dns_v1.py", line 127
    print 'Error creating credentials: %s' % e
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/samples/fusiontables_sample'...
Listing './lib/python3.5/site-packages/samples/fusiontables_sample/fusiontables_v1'...
Compiling './lib/python3.5/site-packages/samples/fusiontables_sample/fusiontables_v1/fusiontables_v1.py'...
***   File "./lib/python3.5/site-packages/samples/fusiontables_sample/fusiontables_v1/fusiontables_v1.py", line 127
    print 'Error creating credentials: %s' % e
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/samples/iam_sample'...
Listing './lib/python3.5/site-packages/samples/iam_sample/iam_v1'...
Compiling './lib/python3.5/site-packages/samples/iam_sample/iam_v1/iam_v1.py'...
***   File "./lib/python3.5/site-packages/samples/iam_sample/iam_v1/iam_v1.py", line 163
    print 'Error creating credentials: %s' % e
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/samples/servicemanagement_sample'...
Listing './lib/python3.5/site-packages/samples/servicemanagement_sample/servicemanagement_v1'...
Compiling './lib/python3.5/site-packages/samples/servicemanagement_sample/servicemanagement_v1/servicemanagement_v1.py'...
***   File "./lib/python3.5/site-packages/samples/servicemanagement_sample/servicemanagement_v1/servicemanagement_v1.py", line 163
    print 'Error creating credentials: %s' % e
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/strict_rfc3339-0.7.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
